fix: tooltip overflowing right screen edge

--- a/client/src/components/user-profile/shared-local.css
+++ b/client/src/components/user-profile/shared-local.css
@@ -25,10 +25,10 @@
   opacity: 0;
   transition: 0.2s;
   position: absolute;
-  left: min(0px, 80vw);
+  left: 0;
   top: 18px;
   width: max-content;
-  max-width: 80vw;
+  max-width: clamp(20ch, 60vw - 20ch, 100ch);
   padding: 0.4rem 0.6rem;
   border-radius: 4px;
   color: ghostwhite;
